# pysets

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml
.changeset/: cold-pugs-walk.md  curly-zebras-sneeze.md  four-ads-sniff.md  plenty-seahorses-tell.md  smooth-cougars-hide.md
.github/workflows/: ci.yml
src/pysets/: __init__.py
