[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "pysets"
authors = [
  { name = "Trevor Manz", email = "trevor.j.manz@gmail.com" },
]
description = "example of using changesets in pure python package"
version = "0.0.0"
readme = "README.md"
dependencies = []

[project.license]
text = "MIT"

[tool.hatch.envs.default]
dependencies = [ "ipython", "toml",]

[tool.hatch.version]
path = "package.json"
pattern = "\"version\": \"(?P<version>.+?)\""
